<?xml version="1.0" ?>
<package>
  <name>VisualStates</name>
  <version>0.0.1</version>
  <description>The VisualStates package</description>
  <maintainer email="asik.okan@gmail.com">Okan Aşık</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>python-qt5</depend>
  <depend>python-qt5.qsci</depend>
  <depend>python-sysv-ipc</depend>
  <export/>
</package>
